# syntoniq

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  build.rs  build.sh  build_all  color.py  colors  colors.json  coverage  coverage.sh  design.md  qlaunchpad.toml  test_directive.stq  test_sample.stq  test_simple.stq  work_branch_files.md
.cargo/: windows-cross.toml  windows-native.toml
.github/: copilot-instructions.md
.github/workflows/: main.yml
ci-build/: README.md  build-linux  build-mac  build-windows  fix-ubuntu-sources
color-work/: color-rgb-values  color.py
common/: Cargo.toml
common/directive_derive/: Cargo.toml
common/directive_derive/src/: lib.rs
common/parsing-tests/: all-tokens.json  all-tokens.stq  end-comment-no-newline.json  end-comment-no-newline.stq  errors-1.json  errors-1.stq  errors-2.json  errors-2.stq  errors-3.json  errors-3.stq  errors-4.json  errors-4.stq  generated-note-errors.json  generated-note-errors.stq  layout-errors.json  layout-errors.stq  mark-repeat-1.json  mark-repeat-1.options.json  mark-repeat-2.json  mark-repeat-2.options.json  mark-repeat-2.stq  mark-repeat-3.json  mark-repeat-3.options.json  mark-repeat-4.json  mark-repeat-4.options.json  mark-repeat-4.stq  mark-repeat-5.json  mark-repeat-5.options.json  mark-repeat-5.stq  mark-repeat-6.json  mark-repeat-6.options.json  mark-repeat-6.stq  no-init1.json  no-init1.stq  no-init2.json  no-init2.stq  refresh  tuning-errors.json  tuning-errors.stq  valid.json  (+1 more)
common/parsing-tests/pass2/: all-tokens.json  all-tokens.stq  end-comment-no-newline.json  errors-1.json  errors-1.stq  errors-2.json  errors-2.stq
common/src/: lib.rs  parsing.rs  pitch.rs  test_helpers.rs
common/src/parsing/: built-in-scales.stq  diagnostics.rs  layout.rs  lexer.rs  model.rs  pass1.rs  pass2.rs  pass3.rs  score.rs  score_helpers.rs  tests.rs  timeline.rs
common/src/parsing/lexer/: parsers.rs
common/src/parsing/lexer/parsers/: tests.rs
common/src/parsing/pass1/: tests.rs
common/src/parsing/pass2/: tests.rs
common/src/parsing/score/: directives.rs  generator.rs  repl.rs
common/src/parsing/test-data/: layouts.stq
common/src/pitch/: parser.rs
common/to_static_derive/: Cargo.toml
common/to_static_derive/src/: lib.rs
csound-helper/: CMakeLists.txt  csound_wrapper.h
docs/: README.md  TODO.md  architecture.md  build-and-test.md  claude-syntax.md  copilot-initial-review.md  directives.md  hexboard.md  historical-video-recording.md  ideas.md  release.md  testing.md  video-descriptions
docs/github-releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v1.0.0.md
docs/scratch/: README.md  demo-script.md  dsl.md  keyboard-design.md  midi-tuning.md
examples/: 7edo.stq  alarm1.stq  alarm2.stq  alarm2a.stq  alarm3.stq  catherino-polytonal-resonance.stq  hello.stq  just-intonation-chords.stq  just-intonation.stq  microtonal-hello.stq  minor-thirds.stq  night-jar.stq  rainbow.stq  transpositions.stq
keyboard/: Cargo.toml  build.rs
keyboard/configs/: demo.stq  elegy.stq  elegy.toml  hexboard.stq  launchpad.stq  launchpad.toml  minor-thirds.stq  minor-thirds.toml
keyboard/csound-helper/: CMakeLists.txt
keyboard/src/: config.rs  controller.rs  csound.rs  engine.rs  events.rs  hexboard.rs  keyboard.stq  launchpad.rs  lib.rs  main.rs  midi_player.rs  prompt.rs  repl.rs  scale.rs  sound.csd  test_util.rs  view.rs
keyboard/src/controller/: message.rs
keyboard/src/csound/: wrapper.rs
keyboard/src/engine/: tests.rs
keyboard/src/events/: rgb_colors.rs
keyboard/src/prompt/: player.rs
keyboard/src/view/: content.rs  hexboard_view.rs  launchpad_view.rs  state.rs  web.rs
keyboard/templates/: cell-text.html  cell.html  hexboard-keyboard.html  hexboard.html  launchpad-keyboard.html  launchpad.html  state-view.html
keyboard/test-data/: keyboard.stq
keyboard/testdata/: conf.toml
logo/: README.md  make-svg  syntoniq-logo.ps
manual/: .gitignore  README.md  autogen  book.toml  build  config.toml  deploy  keyboard.css  ordering
manual/content/: hello.md
manual/images/: README.md  hexboard-layout.odg  launchpad-layout.odg
manual/sass/: copy-code.scss  top.scss
manual/src/: SUMMARY.md  csound_generator.md  csound_playback.md  data_blocks.md  device_isolation.md  directives.md  examples.md  generated_scales.md  hexboard.md  introduction.md  keyboard.md  keyboard_core_components.md  launchpad.md  launchpad2.html  layout_engine.md  (+12 more)
misc/: exponent-to-ratio  minor-thirds.py  scale-semitones
scratch/: scratch.stq  scratch1.stq  scratch2.stq  scratch3.stq  scratch4.stq  scratch5.stq  scratch6.stq
scripts/: progmode  setcolor
src/: config.rs  controller.rs  csound.rs  engine.rs  events.rs  layout.rs  lib.rs  main.rs  midi_player.rs  pitch.rs  scale.rs  sound.csd  web.rs
syntoniq/: Cargo.toml
syntoniq/src/: calc.rs  generator.rs  lib.rs  main.rs
syntoniq/src/generator/: csound-template.csd  csound.rs  midi.rs  tests.rs  text.rs
syntoniq/test-data/: test01-note-on-off.csd  test01-note-on-off.json  test01-note-on-off.midi  test01-note-on-off.mpe.midi  test01-note-on-off.mts.midi  test01-note-on-off.stq  test01-note-on-off.txt  test02-articulation.csd  test02-articulation.json  test02-articulation.midi  test02-articulation.mpe.midi  test02-articulation.mts.midi  test02-articulation.stq  test02-articulation.txt  test03-basic-tuning.csd  test03-basic-tuning.json  test03-basic-tuning.midi  test03-basic-tuning.mpe.midi  test03-basic-tuning.mts.midi  test03-basic-tuning.stq  test03-basic-tuning.txt  test04-17-edo.csd  test04-17-edo.json  test04-17-edo.midi  test04-17-edo.mpe.midi  test04-17-edo.mts.midi  test04-17-edo.stq  test04-17-edo.template.csd  test04-17-edo.txt  test05-dynamics.csd  test05-dynamics.json  test05-dynamics.midi  test05-dynamics.mpe.midi  test05-dynamics.mts.midi  test05-dynamics.omit-p2.csd  test05-dynamics.omit-p2.json  test05-dynamics.omit-p2.midi  test05-dynamics.omit-p2.mpe.midi  test05-dynamics.omit-p2.mts.midi  test05-dynamics.omit-p2.txt  (+220 more)
templates/: app.html  cell.html  side-info.html
testdata/: conf.toml
(+161 files in other folders)
