[workspace]
resolver = "3"
members = [
  "common",
  "common/directive_derive",
  "keyboard",
  "syntoniq",
]

[workspace.package]
edition = "2024"
version  = "0.1.1"

[workspace.dependencies]
clap = { version = "4.5.55", features = ["derive"] }
clap_complete = "4.5.65"
midir = "0.10.3"
midly = "0.5.3"
log = "0.4.29"
env_logger = "0.11.8"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive", "rc"] }
anyhow = "1.0.100"
num-rational = { version = "0.4.2", features = ["serde"] }
askama = "0.15.2"
chrono = "0.4.43"
winnow = "0.7.14"
anstream = "0.6.21"
serde_json = "1.0.149"
annotate-snippets = "0.12.10"
primal = "0.3.3"
num-traits = "0.2.19"
num-integer = "0.1.46"
