[workspace]
resolver = "3"
members = [
  "common",
  "common/directive_derive",
  "keyboard",
  "syntoniq",
]

[workspace.package]
edition = "2024"
version  = "1.0.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow some lints that would be me more important if we were creating
# a library crate for public use rather than methods for internal use.
missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
# We have a decent amount of movement between usize, i32, and u32 for
# things that will never be very large because of compatibility with
# other APIs. We could tighten this up sometime, but for now, it's not
# worth it.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
# Using Default::default makes it easier to change types of things,
# e.g., from HashMap to BTreeMap, without changing initialization
# code.
default_trait_access = "allow"
# Personal style
single_match_else = "allow"
similar_names = "allow"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
midir = "0.11.0"
midly = "0.5.3"
log = "0.4.29"
env_logger = "0.11.10"
serde = { version = "1.0.228", features = ["derive", "rc"] }
anyhow = "1.0.102"
num-rational = { version = "0.4.2", features = ["serde"] }
askama = "0.16.0"
chrono = "0.4.44"
winnow = "1.0.3"
anstream = "1.0.0"
serde_json = "1.0.149"
annotate-snippets = "0.12.16"
primal = "0.3.3"
num-traits = "0.2.19"
num-integer = "0.1.46"
