[package]
name = "syntoniq-kbd"
version.workspace = true
edition.workspace = true

[dependencies]
syntoniq-common = { path = "../common" }
clap.workspace = true
clap_complete.workspace = true
midir.workspace = true
midly.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
askama.workspace = true
chrono.workspace = true
flume = "0.12.0"
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["macros", "json"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
rust-embed = "8.11.0"
derive_more = { version = "2.1.1", features = ["debug"] }
num_enum = "0.7.5"
arc-swap = "1.8.1"
bimap = "0.6.3"

[build-dependencies]
bindgen = "0.72.1"

[features]
default = ["csound"]
csound = []
