[package]
name = "syntoniq"
version = "0.1.0"
edition.workspace = true

[dependencies]
syntoniq-common = { path = "../common" }
log.workspace = true
env_logger.workspace = true
serde.workspace = true
anyhow.workspace = true
num-rational.workspace = true
winnow.workspace = true
clap.workspace = true
clap_complete.workspace = true
anstream.workspace = true
serde_json.workspace = true
annotate-snippets.workspace = true
primal.workspace = true
num-traits.workspace = true
num-integer.workspace = true
