[package]
name = "syntoniq"
version.workspace = true
edition.workspace = true

[dependencies]
syntoniq-common = { path = "../common" }
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
num-rational.workspace = true
clap.workspace = true
clap_complete.workspace = true
midly.workspace = true
anstream.workspace = true
serde_json.workspace = true
num-integer.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
